--- a/react-app/src/index.html
+++ b/react-app/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="root">
-        
+         React is Loading !!!   
     </div>
 
     <script src="/vendor.bundle.js"></script>
